--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -57,7 +57,10 @@
       "Upload": "Upload",
       "Apply": "Apply",
       "Reset": "Reset",
-      "Download": "Download File"
+      "Download": "Download File",
+      "Yes": "Yes",
+      "No": "No",
+      "TitleDelete": "Do you want to delete this item?"
     },
     "Notifications": {
       "StoreNotCreated": "Error creating store",
