--- a/src/locale/pt.json
+++ b/src/locale/pt.json
@@ -64,7 +64,10 @@
     },
     "Notifications": {
       "StoreNotCreated": "Error creating store",
-      "StoreCreated": "Store created!"
+      "StoreCreated": "Store created!",
+      "StoreUpdated": "Loja atualizada!",
+      "StoreDelete": "Excluída com sucesso!",
+      "StoreDeleteError": "Erro ao excluir a loja"
     }
   }
 }
