--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -4,6 +4,7 @@
     "StoresMenu": "Stores",
     "OrdersMenu": "Orders",
     "FilesMenu": "Files",
+    "StorePaymentMenu": "Store Payment",
     "Logout": "Logout",
     "loginMessage": "Please enter your data",
     "loginForgotPassword": "Forgot password?",
@@ -14,7 +15,7 @@
     "newPassword": "New password",
     "confirmPassword": "Confirm password",
     "resetPassword": "Reset password",
-    "Marketplaces": {
+    "Stores": {
       "FlatRate": "Flat rate",
       "MarginError": "Margin of error",
       "DaysForPayment": "Days for payment",
@@ -23,19 +24,14 @@
       "CreateDate": "Create date",
       "LastUpdate": "Last update"
     },
-    "Orders": {
-      "Index": "Index",
-      "ConciliationDate": "Conciliation Date",
-      "SaleNote": "Sale Note",
-      "ReturnNote": "Return Note",
-      "InternalOrder": "Internal Order",
-      "MarketplaceOrder": "Marketplace Order",
-      "OrderDate": "Order Date",
-      "OrderStatus": "Order Status"
-    },
     "Files": {
-      "DateUp": "Date Up",
-      "DateProcessing": "Date Processing"
+      "UploadFileTitle": "Upload file",
+      "DateUp": "Uploaded date",
+      "DateProcessing": "Date processing",
+      "UploadSuccess": "Upload successful",
+      "Pending": "Pending",
+      "Payment": "Payment",
+      "Order": "Order"
     },
     "Filters": {
       "Apply": "Apply",
@@ -57,7 +53,11 @@
       "Required": "Required",
       "Email": "E-mail",
       "Password": "Password",
-      "Send": "Send"
+      "Send": "Send",
+      "DateStart": "Date start",
+      "DateEnd": "Date end",
+      "ClickHereOrDragToUpload": "Click here or drag a file to upload",
+      "Download": "Download"
     },
     "AddNewRegister": {
       "AddNewRegister": "Add new register",
@@ -65,7 +65,7 @@
     },
     "Buttons": {
       "Cancel": "Cancel",
-      "Add": "Add",
+      "Save": "Save",
       "Import": "Import",
       "Upload": "Upload",
       "Apply": "Apply",
@@ -79,8 +79,127 @@
       "StoreNotCreated": "Error creating store",
       "StoreCreated": "Store created!",
       "StoreUpdated": "Store updated!",
-      "StoreDelete": "deleted successfully!",
+      "StoreDelete": "Deleted successfully!",
       "StoreDeleteError": "Error deleting store"
-    }
+    },
+    "EMPR_COD": "Company Code",
+    "USUS_COD": "User Code",
+    "MKTP_COD": "Store Code",
+    "ConciliationDate": "Conciliation Date",
+    "InternalOrder": "Internal Order",
+    "StoreOrder": "Store Order",
+    "OrderDate": "Order Date",
+    "RawValue": "Raw Value ($)",
+    "TotalValue": "Total Value ($)",
+    "ReceivedValue": "Received Value",
+    "ReceivedPercentage": "Received (%)",
+    "DuePercentage": "Due (%)",
+    "Status": "Status",
+    "Situation": "Situation",
+    "Payments": "Payments",
+    "PaymentDate": "Payment Date",
+    "PaymentValue": "Payment Value ($)",
+    "PENDING": "PENDING",
+    "VERIFY": "VERIFY",
+    "PAID": "PAID",
+    "PEDS_COD": "ID",
+    "PEDS_STR_REFSKU": "SKU Reference Number",
+    "PEDS_STR_NOMVAR": "Variation Name",
+    "PEDS_STR_NOMUSRCOM": "Username (Buyer)",
+    "PEDS_STR_CID": "City",
+    "PEDS_STR_BAI": "Neighborhood",
+    "PEDS_STR_EST": "State",
+    "PEDS_STR_PAI": "Country",
+    "PEDS_STR_CEP": "Postal Code",
+    "PEDS_STR_OBSCOM": "Buyer Note",
+    "PEDS_STR_HRAPED": "Complete Order Time",
+    "PEDS_STR_NOT": "Note",
+    "PEDS_STR_NOMDES": "Recipient Name",
+    "PEDS_STR_TEL": "Phone",
+    "PEDS_STR_CPFCOM": "Buyer CPF",
+    "PEDS_STR_ENDENT": "Delivery Address",
+    "PEDS_STR_NUMRAS": "Tracking Number",
+    "PEDS_STR_OPSENV": "Shipping Option",
+    "PEDS_STR_METENV": "Shipping Method",
+    "PEDS_STR_STAPED": "Order Status",
+    "PEDS_STR_REFSKUPRI": "Main SKU Reference Number",
+    "PEDS_STL_MOTCAN": "Cancel Reason",
+    "PEDS_BIT_CON": "Reconciled",
+    "PEDS_EXT_COD": "Store order",
+    "PEDS_DAT_DATPREVENV": "Estimated Shipping Date",
+    "PEDS_DAT_PRZENV": "Shipping Time",
+    "PEDS_DAT_DATPDS": "Order Creation Date",
+    "PEDS_DAT_HRAPAG": "Order Payment Time",
+    "PEDS_VAL_PREORI": "Original Price",
+    "PEDS_VAL_PREACO": "Agreed Price",
+    "PEDS_INT_QTD": "Quantity",
+    "PEDS_VAL_SUBTOT": "Product Subtotal",
+    "PEDS_VAL_DESVEN": "Seller Discount",
+    "PEDS_VAL_DESVEN001": "Seller Discount_1",
+    "PEDS_VAL_REMSHP": "Shopee Refund",
+    "PEDS_PES_PESSKU": "Total SKU Weight",
+    "PEDS_INT_NUMPROPED": "Number of Ordered Products",
+    "PEDS_PES_PESTOT": "Total Order Weight",
+    "PEDS_VAL_CUPVEN": "Seller Coupon",
+    "PEDS_VAL_COICAS": "Seller Absorbed Coin Cashback",
+    "PEDS_VAL_CUPSHP": "Shopee Coupon",
+    "PEDS_BIT_INDLEVMAI": "Buy More for Less Indicator",
+    "PEDS_VAL_DESLEVMAI": "Shopee Buy More for Less Discount",
+    "PEDS_VAL_DESLEVMAIVEN": "Seller Buy More for Less Discount",
+    "PEDS_INT_COMCOIN": "Compensate Shopee Coins",
+    "PEDS_VAL_TOTDESCAR": "Total Credit Card Discount",
+    "PEDS_VAL_VALTOT": "Total Value",
+    "PEDS_VAL_TAXENVCOM": "Shipping Fee",
+    "PEDS_VAL_DESFREAPX": "Approximate Shipping Discount",
+    "PEDS_VAL_TAXENVREV": "Reverse Shipping Fee",
+    "PEDS_VAL_TAXTRA": "Transaction Fee",
+    "PEDS_VAL_TAXCSS": "Commission Fee",
+    "PEDS_VAL_TAXSER": "Service Fee",
+    "PEDS_VAL_TOTGLO": "Global Total",
+    "PEDS_VAL_VALESTFRE": "Estimated Shipping Value",
+    "PEDS_STL_NOMPRO": "Product Name",
+    "PEDS_STL_STADEV": "Delivery Status",
+    "PEDS_STL_CODCUP": "Coupon Code",
+    "PEDS_STR_CID001": "City_1",
+    "end_term": "End of term",
+    "flat_rate": "Flat rate",
+    "margin": "Margin (%)",
+    "payment_day": "Payment day",
+    "start_term": "Start of term",
+    "updated_at": "Updated at",
+    "created_at": "Created at",
+    "MKTP_NOM_NAM": "Store name",
+    "DEPOSIT_DATE": "Deposit date",
+    "VALUE": "Value ($)",
+    "Store_id": "Store Id",
+    "Store_name": "Store name",
+    "Fee": "Fee (%)",
+    "Store_Details": "Store details",
+    "Days_to_payment": "Days to payment",
+    "FlatRate": "Flat rate",
+    "MarginError": "Margin of error",
+    "DaysForPayment": "Days for payment",
+    "StartOfTerm": "Start of term",
+    "EndOfTerm": "End of term",
+    "CreateDate": "Create date",
+    "LastUpdate": "Last update",
+    "ShippingMenu": "Shipping",
+    "start_track": "Start track",
+    "end_track": "End track",
+    "Value": "Value",
+    "shipping_id": "Shipping id",
+    "name": "Name",
+    "storeConfig_Id": "Store config id",
+    "storeConfig_startTerm": "Store config start term",
+    "storeConfig_endTerm": "Store config end term",
+    "StoresTitle": "Stores",
+    "value": "Value",
+    "Success": "Success",
+    "success": "Success",
+    "EditRegister": "Edit register",
+    "error_desc": "Error",
+    "True": "True",
+    "False": "False",
+    "All": "All"
   }
 }
