--- a/src/locale/es.json
+++ b/src/locale/es.json
@@ -1,74 +1,3 @@
 {
-  "translation": {
-    "DashboardMenu": "Panel",
-    "StoresMenu": "Tiendas",
-    "OrdersMenu": "Pedidos",
-    "FilesMenu": "Archivos",
-    "Logout": "Cerrar sesión",
-    "Marketplaces": {
-      "FlatRate": "Tasa fija",
-      "MarginError": "Margen de error",
-      "DaysForPayment": "Días para pago",
-      "StartOfTerm": "Inicio del plazo",
-      "EndOfTerm": "Fin del plazo",
-      "CreateDate": "Fecha de creación",
-      "LastUpdate": "Última actualización"
-    },
-    "Orders": {
-      "Index": "Índice",
-      "ConciliationDate": "Fecha de Conciliación",
-      "SaleNote": "Nota de Venta",
-      "ReturnNote": "Nota de Devolución",
-      "InternalOrder": "Pedido Interno",
-      "MarketplaceOrder": "Pedido del Marketplace",
-      "OrderDate": "Fecha del Pedido",
-      "OrderStatus": "Estado del Pedido"
-    },
-    "Files": {
-      "DateUp": "Fecha de Actualización",
-      "DateProcessing": "Fecha de Procesamiento"
-    },
-    "Filters": {
-      "Apply": "Aplicar",
-      "OrderStart": "Inicio del Pedido",
-      "OrderEnd": "Fin del Pedido",
-      "Confirmed": "Confirmado",
-      "Cancelled": "Cancelado"
-    },
-    "Common": {
-      "Name": "Nombre",
-      "Actions": "Acciones",
-      "Marketplace": "Tienda",
-      "Store": "Tienda",
-      "User": "Usuario",
-      "Type": "Tipo",
-      "Pagination": "Líneas por página",
-      "ClearFilters": "Limpiar filtros",
-      "Commission": "Comisión",
-      "Required": "Required"
-    },
-    "AddNewRegister": {
-      "AddNewRegister": "Agregar nuevo registro",
-      "Dialog": "Por favor, rellene los datos para el nuevo registro."
-    },
-    "Buttons": {
-      "Cancel": "Cancelar",
-      "Add": "Agregar",
-      "Import": "Importar",
-      "Upload": "Subir",
-      "Apply": "Aplicar",
-      "Reset": "Restablecer",
-      "Download": "Descargar Archivo",
-      "Yes": "Sí",
-      "No": "No",
-      "TitleDelete": "¿Quieres eliminar este elemento?"
-    },
-    "Notifications": {
-      "StoreNotCreated": "Error creating store",
-      "StoreCreated": "Store created!",
-      "StoreUpdated": "¡Tienda actualizada!",
-      "StoreDelete": "¡Eliminada con éxito!",
-      "StoreDeleteError": "Error al eliminar la tienda"
-    }
-  }
+  "translation": {}
 }
